k8s/opensensor-growmax-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensensor-growmax
  namespace: whitewhale
  labels:
    app: opensensor-growmax
spec:
  replicas: 2
  selector:
    matchLabels:
      app: opensensor-growmax
  template:
    metadata:
      labels:
        app: opensensor-growmax
    spec:
      containers:
        - name: opensensor-growmax
          image: registry.digitalocean.com/whitewhale/opensensor-storefront
          ports:
          - containerPort: 8010
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "150m"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: opensensor-growmax
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - opensensor-growmax
                topologyKey: "kubernetes.io/hostname"
