k8s/opensensor-growmax-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensensor-growmax
  namespace: whitewhale
  labels:
    app: opensensor-growmax
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-size-slug: "lb-small"
    service.beta.kubernetes.io/do-loadbalancer-name: "whitewhale.mobi"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-path: "/health"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-check-interval-seconds: "3"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-response-timeout-seconds: "5"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-unhealthy-threshold: "3"
    service.beta.kubernetes.io/do-loadbalancer-healthcheck-healthy-threshold: "5"
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3012
  selector:
    app: opensensor-growmax
